Version ClaSS-1.0.4 release (2011/09/16)
-------------------------------------------

Fix to email headers sent through Pear mail, needed the date to be explicity set.

Allowed statement profiles (compound mark types) to be carried forward
to first stage of next course.

Removed the explanation line for SMS and EMails to parents as its not generally helpful.

Fix to listing_community_users when community is blank.

Export student data from InfoBook now checks for value_db in
preference to value from the Student array.

Now pass the active eveid to the absences and print register scripts
(before always use get_currentevent for the whole school and so was not
sensitive to sections).



Version ClaSS-1.0.3 release (2011/09/12)
-------------------------------------------

Fix to student_enrolment action page.

Made fetch_transport lib part of the general functions set.

Improved class_matrix so it will only clear out classes which are no
longer needed, teacher assignments are preserved for unchanged classes.

Fix to list_member_communities to preserve membership info.

Fix to the new db update function (still under debug only).

Tidied the new assessment import script.

Fix to the epf_sync script for the new form group structure.

Allow for parents' epf logins to use data form upto 4 siblings.



Version ClaSS-1.0.2 release (2011/09/09)
-------------------------------------------

Yougest sibling filter for group_search.

Fix to adding new medical details.

Fixes to new budget needed now groups have no name.

Working on catalogue, inventory and fees.

Sorting of register by class periods fixed.

Separated the completed registers by section and added a sideoption for this.

Improved new_class to allow overwriting exisitng MarkBook classes.


Version ClaSS-1.0.1 release (2011/08/24)
-------------------------------------------

Major change to the way form groups are defined, they are merged
completely with the community table. At the same time permission