@@ -6,7 +6,7 @@ Fix to email headers sent through Pear mail, needed the date to be explicity set
 Allowed statement profiles (compound mark types) to be carried forward
 to first stage of next course.
 
-Removed the explanation line for SMS and EMails to parents as its not generally helpful.
+Removed the explanation line for SMS and Emails to parents as its not generally helpful.
 
 Fix to listing_community_users when community is blank.
 
@@ -16,6 +16,15 @@ preference to value from the Student array.
 Now pass the active eveid to the absences and print register scripts
 (before always use get_currentevent for the whole school and so was not
 sensitive to sections).
+
+Now record cid as part of the attendance table of lesson-by-lesson
+register.
+
+Fixed typo in count_attendance.
+
+A fix to listin_community when $yid='%' for the com.
+
+Improved performance of fetchCohortAssessmentDefs.
 
 
 
